jira_clone/force-app/main/default/objects/WorkflowTransition__c/WorkflowTransition__c.object-meta.xml
<CustomObject>
    <description>Workflow transitions between statuses</description>
    <label>Workflow Transition</label>
    <nameField>
        <label>Transition Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Workflow Transitions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>