jira_clone/force-app/main/default/objects/WorkflowTransition__c/fields/FromStatus__c.field-meta.xml
<CustomField>
    <fullName>FromStatus__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>From status</description>
    <label>From Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Transitions From</relationshipLabel>
    <relationshipName>TransitionsFrom</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>