jira_clone/force-app/main/default/objects/WorkflowTransition__c/fields/ToStatus__c.field-meta.xml
<CustomField>
    <fullName>ToStatus__c</fullName>
    <description>To status</description>
    <label>To Status</label>
    <referenceTo>Status__c</referenceTo>
    <relationshipLabel>Transitions To</relationshipLabel>
    <relationshipName>TransitionsTo</relationshipName>
    <required>true</required>
    <type>Lookup</type>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>